gcp-not-production/elasticstack/kibana/kibana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: elasticstack
spec:
  ports:
    - port: 80
      targetPort: 5601
  selector:
    app: kibana
