gcp-not-production/elasticstack/kibana/kibana-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kibana
  namespace: elasticstack
spec:
  hosts:
  - "kibana.runsix.app"
  gateways:
  - istio.default.svc.cluster.local
  http:
  - name: "kibana"
    route:
      - destination:
          host: kibana.elasticstack.svc.cluster.local
